added some responsivness

--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -51,7 +51,7 @@ html {
     align-items: center;
     justify-content: center;
     > * {
-        margin: 6vh;
+        margin: 3vh;
     }
 }
 
@@ -76,11 +76,92 @@ html {
 }
 
 
-@media (max-width: 600px) {
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
     .title {
-        font-size: 30px;
+        font-size: 40px;
     }
     .points {
-        font-size: 30px;
+        font-size: 40px;
     }
+    .zombie {
+        transform: scale(0.7);
+    }
+  }
+
+  @media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    .title {
+        font-size: 40px;
+    }
+    .points {
+        font-size: 40px;
+    }
+    span {
+        font-size: 40px;
+    }
+    .zombie {
+        transform: scale(0.7);
+    }
+}
+
+@media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 736px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) { 
+    .title {
+        font-size: 40px;
+    }
+    .points {
+        font-size: 40px;
+    }
+    span {
+        font-size: 40px;
+    }
+    .zombie {
+        transform: scale(0.7);
+    }
+}
+
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3) { 
+
+    .title {
+        font-size: 40px;
+    }
+    .points {
+        font-size: 40px;
+    }
+    span {
+        font-size: 40px;
+    }
+    .zombie {
+        transform: scale(0.7);
+    }
+}
+
+@media screen 
+  and (device-width: 823px) 
+  and (device-height: 411px) 
+  and (-webkit-device-pixel-ratio: 4) {
+    .title {
+        font-size: 40px;
+    }
+    .points {
+        font-size: 40px;
+    }
+    span {
+        font-size: 40px;
+    }
+    .zombie {
+        transform: scale(0.7);
+    }
+
 }
